# prompt-driven-ai-service

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: clients.py  exceptions.py  main.py
src/core/: config.py  constants.py
src/exceptions/: ai.py  storage.py
src/schemas/: requests.py
src/services/: ai.py  prompts.py  storage.py
src/static/prompts/: audio_prompt.md  meta_prompt.md
