[project]
name = "ai-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Shirokov",email = "ilshi2904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "grog (>=0.93,<0.94)",
    "langchain-groq (>=1.1.3,<2.0.0)",
    "langchain-core (>=1.4.8,<2.0.0)",
    "fastapi (>=0.137.2,<0.138.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.18,<0.16.0)"
]
